# capsule_msgs

./: CMakeLists.txt  package.xml
msg/: Capsule.msg
