<?xml version="1.0"?>
<package>
  <name>capsule_msgs</name>
  <version>0.1.0</version>
  <description>Messages for capsule usage and visualization</description>
  <maintainer email="karsten.knese@googlemail.com">Karsten Knese</maintainer>

  <license>BSD</license>
  <author email="karsten.knese@googlemail.com">Karsten Knese</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
